Add test resource plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "PotionTaster/Plugins/HTML.wcplugin"]
 	path = PotionTaster/Plugins/HTML.wcplugin
 	url = git@github.com:potionlab/HTML.wcplugin.git
+[submodule "PotionTaster/Plugins/Shared-Test-Resources.wcplugin"]
+	path = PotionTaster/Plugins/Shared-Test-Resources.wcplugin
+	url = git@github.com:potionlab/Shared-Test-Resources.wcplugin.git
