--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 language: swift
 osx_image: xcode10
 script: make ci
-xcode_project: PotionTaster
-xcode_scheme: PotionTaster
-env:
-  global:
-  - FRAMEWORK_NAME=PotionTaster
+branches:
+  only:
+    - master
+      - /^\d+\.\d+\.\d+$/
 before_install:
-- brew update
-- brew outdated carthage || brew upgrade carthage
+  - brew update
+  - brew outdated carthage || brew upgrade carthage
 before_script:
-- make lint
+  - make lint
 before_deploy:
-- carthage build --no-skip-current
-- carthage archive $FRAMEWORK_NAME
+  - carthage build --no-skip-current
+  - carthage archive PotionTaster
+notifications:
+  irc: "chat.freenode.net#thepotionlab-notifications"
 deploy:
   provider: releases
   api_key:
