--- a/PotionTaster.xcodeproj/xcshareddata/xcschemes/PotionTaster.xcscheme
+++ b/PotionTaster.xcodeproj/xcshareddata/xcschemes/PotionTaster.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4503CDE71ED7ADE200AB3B78"
-               BuildableName = "PotionTaster.framework"
-               BlueprintName = "PotionTaster"
+               BuildableName = "SodaTaster.framework"
+               BlueprintName = "SodaTaster"
                ReferencedContainer = "container:PotionTaster.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4503CDF01ED7ADE200AB3B78"
-               BuildableName = "PotionTasterTests.xctest"
-               BlueprintName = "PotionTasterTests"
+               BuildableName = "SodaTasterTests.xctest"
+               BlueprintName = "SodaTasterTests"
                ReferencedContainer = "container:PotionTaster.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,8 +43,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4503CDE71ED7ADE200AB3B78"
-            BuildableName = "PotionTaster.framework"
-            BlueprintName = "PotionTaster"
+            BuildableName = "SodaTaster.framework"
+            BlueprintName = "SodaTaster"
             ReferencedContainer = "container:PotionTaster.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4503CDE71ED7ADE200AB3B78"
-            BuildableName = "PotionTaster.framework"
-            BlueprintName = "PotionTaster"
+            BuildableName = "SodaTaster.framework"
+            BlueprintName = "SodaTaster"
             ReferencedContainer = "container:PotionTaster.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,8 +83,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4503CDE71ED7ADE200AB3B78"
-            BuildableName = "PotionTaster.framework"
-            BlueprintName = "PotionTaster"
+            BuildableName = "SodaTaster.framework"
+            BlueprintName = "SodaTaster"
             ReferencedContainer = "container:PotionTaster.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
