--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "PotionTaster/Plugins/IRB.wcplugin"]
-	path = PotionTaster/Bundles/IRB.wcplugin
+	path = SodaTaster/Bundles/IRB.wcplugin
 	url = https://github.com/repla-app/IRB.wcplugin.git
 [submodule "PotionTaster/Plugins/HTML.wcplugin"]
-	path = PotionTaster/Bundles/HTML.wcplugin
+	path = SodaTaster/Bundles/HTML.wcplugin
 	url = https://github.com/repla-app/HTML.wcplugin.git
 [submodule "PotionTaster/Plugins/Shared-Test-Resources.wcplugin"]
-	path = PotionTaster/Bundles/SharedTestResources.wcplugin
+	path = SodaTaster/Bundles/SharedTestResources.wcplugin
 	url = https://github.com/repla-app/SharedTestResources.wcplugin.git
 [submodule "PotionTaster/Plugins/SharedResources.wcplugin"]
-	path = PotionTaster/Bundles/SharedResources.wcplugin
+	path = SodaTaster/Bundles/SharedResources.wcplugin
 	url = https://github.com/repla-app/SharedResources.wcplugin.git
