--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "PotionTaster/Plugins/IRB.wcplugin"]
+[submodule "SodaTaster/Bundles/IRB.wcplugin"]
 	path = SodaTaster/Bundles/IRB.wcplugin
 	url = https://github.com/repla-app/IRB.wcplugin.git
-[submodule "PotionTaster/Plugins/HTML.wcplugin"]
+[submodule "SodaTaster/Bundles/HTML.wcplugin"]
 	path = SodaTaster/Bundles/HTML.wcplugin
 	url = https://github.com/repla-app/HTML.wcplugin.git
