--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "SodaTaster/Bundles/HTML.wcplugin"]
 	path = SodaTaster/Bundles/HTML.wcplugin
 	url = https://github.com/repla-app/HTML.wcplugin.git
+[submodule "SodaTaster/TestAssets"]
+	path = SodaTaster/TestAssets
+	url = git@github.com:repla-app/TestAssets.git
