--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,9 @@
-[submodule "PotionTaster/Plugins/IRB.wcplugin"]
+[submodule "SodaTaster/Bundles/IRB.wcplugin"]
 	path = SodaTaster/Bundles/IRB.wcplugin
 	url = https://github.com/repla-app/IRB.wcplugin.git
-[submodule "PotionTaster/Plugins/HTML.wcplugin"]
+[submodule "SodaTaster/Bundles/HTML.wcplugin"]
 	path = SodaTaster/Bundles/HTML.wcplugin
 	url = https://github.com/repla-app/HTML.wcplugin.git
-[submodule "PotionTaster/Plugins/Shared-Test-Resources.wcplugin"]
-	path = SodaTaster/Bundles/SharedTestResources.wcplugin
-	url = https://github.com/repla-app/SharedTestResources.wcplugin.git
-[submodule "PotionTaster/Plugins/SharedResources.wcplugin"]
-	path = SodaTaster/Bundles/SharedResources.wcplugin
-	url = https://github.com/repla-app/SharedResources.wcplugin.git
+[submodule "SodaTaster/TestAssets"]
+	path = SodaTaster/TestAssets
+	url = https://github.com/repla-app/TestAssets.git
