--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SodaTaster/Assets/repla-ruby"]
 	path = SodaTaster/Assets/repla-ruby
-	url = git@github.com:repla-app/repla-ruby.git
+	url = https://github.com/repla-app/Log.wcplugin.git
