--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "SodaTaster/Bundles/IRB.wcplugin"]
-	path = SodaTaster/Bundles/IRB.wcplugin
-	url = https://github.com/repla-app/IRB.wcplugin.git
-[submodule "SodaTaster/Bundles/HTML.wcplugin"]
-	path = SodaTaster/Bundles/HTML.wcplugin
-	url = https://github.com/repla-app/HTML.wcplugin.git
-[submodule "SodaTaster/TestAssets"]
-	path = SodaTaster/TestAssets
-	url = https://github.com/repla-app/TestAssets.git
+[submodule "SodaTaster/Assets/repla-ruby"]
+	path = SodaTaster/Assets/repla-ruby
+	url = https://github.com/repla-app/repla-ruby.git
