--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ci:
-    runs-on: macos-latest
+    runs-on: macos-11.1
     steps:
       - name: IRC notification
         uses: Gottox/irc-message-action@v1
