--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   release:
-    runs-on: macos-latest
+    runs-on: macos-11.1
     steps:
       - name: IRC notification
         uses: Gottox/irc-message-action@v1
